# unimail

./: .gitignore  README.md  pyproject.toml
agent-configs/: autogpt-plugin.json  dify-openapi.yaml  langchain-example.py  opencode-mcp.json
src/: __init__.py  api.py  cache.py  client.py  config.py  log.py  models.py  server.py  templates.py  webhook.py
src/auth/: __init__.py  gmail_auth.py  oauth_flow.py  outlook_auth.py
src/cli/: main.py
src/connectors/: base.py  gmail_connector.py  imap_connector.py  outlook_connector.py
src/engine/: __init__.py  mail_engine.py
src/integrations/: __init__.py  langchain_tools.py
src/schemas/: __init__.py  openai_functions.py
src/storage/: database.py  token_store.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_engine.py  test_models.py  test_schemas.py  test_storage.py
