[project]
name = "unimail"
version = "0.1.0"
description = "Unified email gateway for AI agents - MCP Server + CLI"
requires-python = ">=3.11"
dependencies = [
    # MCP Server
    "mcp>=1.0.0",
    # Gmail API
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    # Microsoft Graph
    "msal>=1.28.0",
    "httpx>=0.27.0",
    # IMAP/SMTP
    "aioimaplib>=1.1.0",
    "aiosmtplib>=3.0.0",
    # REST API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Utilities
    "markdown>=3.5",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
all = [
    "langchain-core>=0.2.0",
]

[project.scripts]
unimail = "src.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
